# Zenbleed

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build_and_test.yml  deploy.yml
cmake/: PamplejuceMacOS.cmake
doc/: Doxyfile.in  index.html  terminal.css
doc/custom_pages/: FAQ.md  UserManual.md
doc/custom_styles/: main_style.css
doc/html/: _midi_oscillator_8h_source.html  _plugin_editor_8h_source.html  _plugin_processor_8h_source.html  _sample_oscillator_8h_source.html  _utilities_8h_source.html  _zenbleed_look_and_feel_8h_source.html  annotated.html  annotated_dup.js  class_midi_oscillator-members.html  class_midi_oscillator.html  class_midi_oscillator.js  class_plugin_editor-members.html  class_plugin_editor.html  class_plugin_editor.js  class_plugin_processor-members.html  class_plugin_processor.html  class_plugin_processor.js  class_sample_oscillator-members.html  class_sample_oscillator.html  class_sample_oscillator.js  class_zenbleed_look_and_feel-members.html  class_zenbleed_look_and_feel.html  class_zenbleed_look_and_feel.js  classes.html  diagrams.html  dir_50677a0249ff3149ae03a2f6875b8ac3.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_e68e8157741866f444e17edd764ebbae.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  md__home_dentonspivey__programming__zenbleed__r_e_a_d_m_e.html  md__home_dentonspivey__programming__zenbleed_doc_custom_pages__diagrams.html  md__home_dentonspivey__programming__zenbleed_doc_custom_pages__f_a_q.html  (+10 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
doc/latex/: annotated.tex  class_midi_oscillator.tex  class_plugin_editor.tex  class_plugin_processor.tex  class_sample_oscillator.tex  class_zenbleed_look_and_feel.tex  diagrams.tex  hierarchy.tex  index.tex  md__home_dentonspivey__programming__zenbleed__r_e_a_d_m_e.tex  md__home_dentonspivey__programming__zenbleed_doc_custom_pages__f_a_q.tex  md__home_dentonspivey__programming__zenbleed_doc_custom_pages__main_page.tex  md__home_dentonspivey__programming__zenbleed_doc_custom_pages__user_manual.tex  md_doc_custom_pages__f_a_q.tex  md_doc_custom_pages__user_manual.tex  refman.tex  struct_plugin_editor_1_1_speed_message.tex
packaging/: installer.iss
source/: MidiOscillator.cpp  MidiOscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleOscillator.cpp  SampleOscillator.h  Utilities.h  ZenbleedLookAndFeel.cpp  ZenbleedLookAndFeel.h  makeHelper
tests/: Catch2Main.cpp  PluginBasics.cpp
tests/helpers/: test_helpers.h
